--- a/templates/docker-compose.override.yml.j2
+++ b/templates/docker-compose.override.yml.j2
@@ -37,6 +37,7 @@ services:
         container_name: traefik_certdumper
         network_mode: none
         command: --restart-containers mailcowdockerized_postfix-mailcow_1,mailcowdockerized_dovecot-mailcow_1
+        restart: always
         volumes:
           # mount the folder which contains Traefik's `acme.json' file
           #   in this case Traefik is started from its own docker-compose in ../traefik
